# LittleHelper

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  IntentManager.cpp  IntentManager.hpp  StaticDataParser.cpp  StaticDataParser.hpp  StaticQueryEngine.cpp  StaticQueryEngine.hpp  common.hpp  main.cpp
src/intents/: FactIntent.hpp  Intent.hpp  WeatherCityIntent.hpp  WeatherIntent.hpp
src/interfaces/: IDataParser.hpp  IQueryEngine.hpp
tests/: CMakeLists.txt
tests/unittest/IntentManager/: IntentManager_Test.cpp  stubs.hpp
tests/unittest/StaticDataParser/: StaticDataParser_Test.cpp  stubs.hpp
tests/unittest/StaticQueryEngine/: StaticQueryEngine_Test.cpp
